// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders spinner 1`] = `
<span
  className="jtFWAu"
  color={undefined}
>
  Loading...
</span>
`;

exports[`renders spinner with color 1`] = `
<span
  className="dHrOlN"
  color="blue"
>
  Loading...
</span>
`;
